--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense Tracker</title>
+    <title>Vinayaka Chavithi 2024 GMC-Expense Tracker</title>
 	<link rel="stylesheet" href="styles.css">
     <style>
         body {
@@ -11,7 +11,7 @@
             margin: 20px;
         }
         table {
-            width: 1000px;
+            width: 500px;
             border-collapse: collapse;
             margin-bottom: 20px;
         }
