--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
             <td>Laddoo</td>
             <td>1500</td>
         </tr>
+	    	<tr>
+            <td>Dry Fruits for Laddoo</td>
+            <td>1500</td>
+        </tr>
 		<tr>
             <td>Crackers</td>
             <td>9200</td>
