--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 <table class="expense-table">
     <thead>
         <tr>
-            <th>Expense</th>
-            <th>Expense Amount</th>
+            <th>Category</th>
+            <th>Amount</th>
         </tr>
     </thead>
     <tbody id="expenseTableBody">
