--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             <td>Total Amount</td>
             <td><span id="ta" </span></td>
         </tr>
+	<tr>
+            <td>Spent Amount</td>
+            <td><span id="sa" </span></td>
+        </tr>
         <tr>
             <td>Remaining Amount</td>
             <td><span id="ra" </span></td>
@@ -109,7 +113,7 @@
             const expenseAmount = parseFloat(row.cells[1].textContent.replace('$', ''));
             totalExpenses += expenseAmount;
         });
-
+	document.getElementById("sa").innerHTML = totalExpenses;
         document.getElementById("ra").innerHTML = totalAmount - totalExpenses;
 
 </script>
