--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
             <td>Decoration Lights</td>
             <td>5100</td>
         </tr>
+	        <tr>
+            <td>LED Lights</td>
+            <td>3250</td>
+	    </tr>
 		 <tr>
             <td>Vigraham Selection</td>
             <td>2000</td>
@@ -103,7 +107,7 @@
 </table>
 
 <script>
-        const totalAmount = 54000; // Example total amount available
+        const totalAmount = 54716; // Example total amount available
 		document.getElementById("ta").innerHTML = totalAmount;
         let totalExpenses = 0;
 
