--- a/index.html
+++ b/index.html
@@ -103,11 +103,15 @@
             <td>Vigraham Transport</td>
             <td>3500</td>
         </tr>
+	  <tr>
+            <td>Gaja Maala</td>
+            <td>2500</td>
+        </tr>
     </tbody>
 </table>
 
 <script>
-        const totalAmount = 54716; // Example total amount available
+        const totalAmount = 66216; // Example total amount available
 		document.getElementById("ta").innerHTML = totalAmount;
         let totalExpenses = 0;
 
