--- a/index.html
+++ b/index.html
@@ -107,11 +107,35 @@
             <td>Gaja Maala</td>
             <td>2500</td>
         </tr>
+	<tr>
+            <td>Prasadam cups</td>
+            <td>120</td>
+        </tr>
+	<tr>
+            <td>Knife</td>
+            <td>25</td>
+        </tr>
+	    <tr>
+            <td>Mookatlu</td>
+            <td>100</td>
+        </tr>
+	    <tr>
+            <td>Pooja Saamagri</td>
+            <td>725</td>
+        </tr>
+	    <tr>
+            <td>Stage</td>
+            <td>1650</td>
+        </tr>
+	    <tr>
+            <td>Potlu</td>
+            <td>400</td>
+        </tr>
     </tbody>
 </table>
 
 <script>
-        const totalAmount = 66216; // Example total amount available
+        const totalAmount = 79464; // Example total amount available
 		document.getElementById("ta").innerHTML = totalAmount;
         let totalExpenses = 0;
 
