--- a/index.html
+++ b/index.html
@@ -131,11 +131,68 @@
             <td>Potlu</td>
             <td>400</td>
         </tr>
+	    <tr>
+            <td>Saree</td>
+            <td>850</td>
+        </tr>
+	    <tr>
+            <td>Cheruku, kanaki etc</td>
+            <td>350</td>
+        </tr>
+	    <tr>
+            <td>Tent auto</td>
+            <td>200</td>
+        </tr>
+	    <tr>
+            <td>Tent workers</td>
+            <td>300</td>
+        </tr>
+	    <tr>
+            <td>Tape, scissors, pin</td>
+            <td>100</td>
+        </tr>
+	    <tr>
+            <td>wire, steel wire, tester</td>
+            <td>960</td>
+        </tr>
+	    <tr>
+            <td>Sticks</td>
+            <td>150</td>
+        </tr>
+	    <tr>
+            <td>Mokkalu</td>
+            <td>450</td>
+        </tr>
+	    <tr>
+            <td>Needles, threads</td>
+            <td>78</td>
+        </tr>
+	    <tr>
+            <td>Police permission</td>
+            <td>40</td>
+        </tr>
+	    <tr>
+            <td>Can Cutting</td>
+            <td>50</td>
+        </tr>
+	    <tr>
+            <td>Coconut</td>
+            <td>50</td>
+        </tr>
+	    <tr>
+            <td>Dakshina, Vigraham lifting</td>
+            <td>150</td>
+        </tr>
+	    <tr>
+            <td>Water bottles mydukur</td>
+            <td>40</td>
+        </tr>
+	    
     </tbody>
 </table>
 
 <script>
-        const totalAmount = 79464; // Example total amount available
+        const totalAmount = 80984; // Example total amount available
 		document.getElementById("ta").innerHTML = totalAmount;
         let totalExpenses = 0;
 
