--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <td>850</td>
         </tr>
 	    <tr>
-            <td>Cheruku, kanaki etc</td>
+            <td>Cheruku, kanki, velakkaya</td>
             <td>350</td>
         </tr>
 	    <tr>
