--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
             <td><span id="la" </span></td>
         </tr>
         <tr>
-            <td>Total Amount</td>
-            <td><span id="ta" </span></td>
+            <td><bold>Total Amount</bold></td>
+            <td><bold><span id="ta" </span></bold></td>
         </tr>
 	<tr>
             <td>Spent Amount</td>
             <td><span id="sa" </span></td>
         </tr>
         <tr>
-            <td>Remaining Amount</td>
-            <td><span id="ra" </span></td>
+            <td><bold>Remaining Amount</bold></td>
+            <td><bold><span id="ra" </span></span>bold</td>
         </tr>
 		</tbody>
         </table>
