--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
             <td><span id="la" </span></td>
         </tr>
         <tr>
-            <td><bold>Total Amount</bold></td>
-            <td><bold><span id="ta" </span></bold></td>
+            <td><strong>Total Amount</strong></td>
+            <td><strong><span id="ta" </span></strong></td>
         </tr>
 	<tr>
             <td>Spent Amount</td>
             <td><span id="sa" </span></td>
         </tr>
         <tr>
-            <td><bold>Remaining Amount</bold></td>
-            <td><bold><span id="ra" </span></span>bold</td>
+            <td><strong>Remaining Amount</strong></td>
+            <td><strong><span id="ra" </span></strong</td>
         </tr>
 		</tbody>
         </table>
