--- a/index.html
+++ b/index.html
@@ -195,7 +195,34 @@
             <td>Water bottles mydukur</td>
             <td>40</td>
         </tr>
-	    
+	    <tr>
+            <td>Panchamrutham</td>
+            <td>820</td>
+        </tr>
+	    <tr>
+            <td>Police</td>
+            <td>500</td>
+        </tr>  
+	    <tr>
+            <td>Chintu makeup</td>
+            <td>335</td>
+        </tr>
+	    <tr>
+            <td>Hydrogen bomb</td>
+            <td>140</td>
+        </tr>
+	    <tr>
+            <td>Masks</td>
+            <td>300</td>
+        </tr>
+	    <tr>
+            <td>Ravanna dance</td>
+            <td>100</td>
+        </tr>
+	    <tr>
+            <td>Watercan Auto</td>
+            <td>50</td>
+        </tr>
     </tbody>
 </table>
 
